--- a/Mos/ru.lproj/Main.strings
+++ b/Mos/ru.lproj/Main.strings
@@ -7,7 +7,7 @@
 */
 
 // Mointor
-"TUE-3v-CaJ.title" = "          Визуализация этой диаграммы повлияет на производительность прокрутки. Закройте окно, когда оно не используется.";
+"TUE-3v-CaJ.title" = "Визуализация этой диаграммы повлияет на производительность прокрутки. Закройте окно, когда оно не используется.";
 
 // PreferencesWindow
 "cvF-hf-KVW.title" = "Настройки";
@@ -21,8 +21,14 @@
 "dyY-vr-dwT.title" = "Другие:";
 "xoR-7p-3qj.title" = "Запустить при входе";
 "MdS-Nz-zMa.title" = "Автозапуск при входе";
+"hGj-vV-zcY.title" = "Hide Status Bar Icon";
+"bB5-2R-9Da.title" = "Re-run Mos again to show the hidden Icon";
+"cIk-j1-vYt.title" = "You need to re-run Mos from Finder-Application instead of the launch pad. (The launch pad will automatically ignore the launched app)";
 // Advanced
 "iW5-CD-5OC.title" = "Расширенные";
+"hOO-M8-I1z.title" = "Dash Key:";
+"Vhz-Rn-lcU.title" = "Disabled";
+"Z59-tN-QjE.title" = "Increase scrolling speed on long pages";
 "bQw-5w-Yv0.title" = "Кнопка переключения:";
 "cTe-aL-0GQ.title" = "Изменить вертикальную прокрутку на горизонтальную прокрутку";
 "KnM-kA-wn5.title" = "Кнопка блокировки:";
@@ -47,6 +53,12 @@
 "v26-RK-BtL.title" = "Режим белого списка заставит Mos применяться только к приложениям в списке исключений.";
 "ThS-Rm-st2.title" = "Ничего не выбрано";
 "jaq-Cb-dKM.title" = "Вы можете применить отдельную конфигурацию к определенным приложениям, нажав кнопку \'+\'  ниже";
+"dhF-95-kUJ.title" = "Select From Installed Applications";
+"Vp7-0n-aRd.title" = "Manually Input Application Information";
+"kUr-cl-KRm.title" = "Application Name:";
+"Ck5-if-9RS.title" = "Bundle Identifier:";
+"Mdw-fZ-Nyy.title" = "Cancel";
+"2v4-AC-WG5.title" = "Confirm";
 // Updates
 "EWu-DP-7Gj.title" = "Обновления";
 "vdI-K4-SBh.title" = "Проверить наличие обновлений:";
@@ -64,13 +76,6 @@
 "ZJY-Yg-Qev.title" = "Авторы";
 "Lhz-x5-X0I.title" = "Перевод";
 "GWm-aK-UoV.title" = "Список разработчиков";
-
-// HideStatusItemWindow
-"WNd-iN-aAG.title" = "Скрыть значок строки состояния";
-"hDs-Yh-11x.title" = "Но Mos продолжит работать в фоновом режиме без иконки в строке состояния.";
-"zAs-CP-Wpw.title" = "Как только вы скроете значок, вы не сможете получить доступ к настройкам Mos'. Если вы хотите снова отобразить его, используйте приложение «Мониторинг системы», чтобы закрыть приложение Mos, а затем снова запустите Mos. Затем нажмите на кнопку \'Показать\' в уведомлениях.";
-"ueB-gF-VZ8.title" = "Отмена";
-"hhO-Gh-ldE.title" = "Все еще скрыть значок строки состояния";
 
 // WelcomeWindow
 "SLb-UR-lz1.title" = "Добро пожаловать в Mos";
